[gd_scene load_steps=13 format=3 uid="uid://dlj5sgeryyejw"]

[ext_resource type="Script" path="res://Player.gd" id="1_wihp0"]
[ext_resource type="AudioStream" uid="uid://bjgj4kig4gcot" path="res://SFX - Death Explosion.ogg" id="2_6mkir"]
[ext_resource type="AudioStream" uid="uid://d34aukwvq5b" path="res://SFX - Success.ogg" id="3_8h82c"]
[ext_resource type="AudioStream" uid="uid://cdwhkuwanqlju" path="res://SFX - Main engine thrust.ogg" id="4_qt555"]
[ext_resource type="PackedScene" uid="uid://ux6ivcx1ovdp" path="res://booster_particles.tscn" id="5_bwq6j"]
[ext_resource type="PackedScene" uid="uid://dcecb8hw7dbrv" path="res://explosion_particles.tscn" id="6_sbjpo"]
[ext_resource type="PackedScene" uid="uid://jfwajmrh6ca7" path="res://success_particles.tscn" id="7_kvco7"]

[sub_resource type="CylinderMesh" id="CylinderMesh_gt676"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_o3j0j"]

[sub_resource type="CylinderMesh" id="CylinderMesh_382y7"]
top_radius = 0.27
bottom_radius = 0.27
height = 1.5

[sub_resource type="CylinderMesh" id="CylinderMesh_2rvr1"]
top_radius = 0.065
bottom_radius = 0.27
height = 0.5

[sub_resource type="BoxMesh" id="BoxMesh_1wa47"]

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
max_contacts_reported = 10
contact_monitor = true
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_wihp0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CylinderMesh_gt676")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_o3j0j")

[node name="ExplosionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_6mkir")

[node name="SuccessAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8h82c")

[node name="RocketAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_qt555")

[node name="BoosterParticles" parent="." instance=ExtResource("5_bwq6j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="RightBoostParticles" parent="." instance=ExtResource("5_bwq6j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -1, 0)

[node name="LeftBoostParticles" parent="." instance=ExtResource("5_bwq6j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, -1, 0)

[node name="ExplosionParticles" parent="." instance=ExtResource("6_sbjpo")]

[node name="SuccessParticles" parent="." instance=ExtResource("7_kvco7")]

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.234346, 0)
mesh = SubResource("CylinderMesh_382y7")

[node name="Cockpit" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.984346, 0)
mesh = SubResource("CylinderMesh_2rvr1")
skeleton = NodePath("../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.210013, 0, 0, 0, 0.405911, 0, 0, 0, 0.294892, 0.35, -0.5, 0)
mesh = SubResource("BoxMesh_1wa47")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.210013, 0, 0, 0, 0.405911, 0, 0, 0, 0.294892, -0.35, -0.5, 0)
mesh = SubResource("BoxMesh_1wa47")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
